--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest package="com.zhizhong.yujian"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".module.my.activity.LoginActivity"/>
+        <activity android:name=".module.my.activity.SetNameActivity"/>
+        <activity android:name=".module.my.activity.FindPwdActivity"/>
+        <activity android:name=".module.my.activity.ResetPwdActivity"/>
     </application>
 
 </manifest>
