--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
     implementation 'com.contrarywind:Android-PickerView:3.2.6'
+
+    implementation 'com.github.ome450901:SimpleRatingBar:1.4.1'
+
 }
