--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".MyApplication"
+        android:resizeableActivity="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".module.home.activity.MainActivity">
             <intent-filter>
