--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
     implementation 'com.youth.banner:banner:1.4.9'
     implementation 'com.github.ome450901:SimpleRatingBar:1.4.1'
 
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
+
 }
