--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <activity android:name=".module.my.activity.AddressListActivity"/>
         <activity android:name=".module.mall.activity.PaySuccessActivity"/>
         <activity android:name=".module.my.activity.LoginForPwdActivity"/>
+        <activity android:name=".module.mall.activity.GoodsDetailActivity"/>
     </application>
 
 </manifest>
