--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation(name: 'androidutils', ext: 'aar')
     implementation(name: 'Dialog', ext: 'aar')
     implementation(name: 'androidbaseclass', ext: 'aar')
+    implementation(name: 'fastshape', ext: 'aar')
 //    api(name: 'retrofitutil', ext: 'aar')
 
 //    api 'com.squareup.retrofit2:converter-gson:2.1.0'
@@ -60,7 +61,7 @@ dependencies {
 
 //    api 'com.github:baseclass:1.0.2'
 //    api 'com.github:customview:1.1.3'
-    implementation 'com.github:fastshape:1.0.4'
+//    implementation 'com.github:fastshape:1.0.4'
 //    api 'com.github:androidutils:1.0.4'
     implementation 'com.github:retrofitutil:1.1.4'
 //    implementation(name: 'rxandroid', ext: 'aar')
