--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
         <activity android:name=".module.mall.activity.PaySuccessActivity"/>
         <activity android:name=".module.my.activity.LoginForPwdActivity"/>
         <activity android:name=".module.mall.activity.GoodsDetailActivity" android:configChanges="screenSize|keyboardHidden|orientation"/>
+        <activity android:name=".module.mall.activity.GoodsClassActivity"/>
     </application>
 
 </manifest>
