--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,7 @@
         <activity android:name=".module.mall.activity.GoodsClassActivity"/>
         <activity android:name=".module.auction.fragment.ChuJiaActivity"/>
         <activity android:name=".module.auction.activity.PaiMaiOrderActivity"/>
+        <activity android:name=".module.auction.activity.PaiMaiOrderDetailActivity"/>
     </application>
 
 </manifest>
