--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,11 +83,12 @@
         <activity android:name=".module.mall.activity.PaySuccessActivity"/>
         <activity android:name=".module.my.activity.LoginForPwdActivity"/>
         <activity android:name=".module.mall.activity.GoodsDetailActivity" android:configChanges="screenSize|keyboardHidden|orientation"/>
-        <activity android:name=".module.mall.activity.GoodsClassActivity"/>
+        <activity android:name=".module.mall.activity.GoodsClassActivity"  />
         <activity android:name=".module.auction.fragment.ChuJiaActivity"/>
         <activity android:name=".module.auction.activity.PaiMaiOrderActivity"/>
         <activity android:name=".module.auction.activity.PaiMaiOrderDetailActivity"/>
         <activity android:name=".module.my.activity.VIPActivity"/>
+        <activity android:name=".module.mall.activity.NewScanActivity"/>
     </application>
 
 </manifest>
