--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,25 +37,22 @@ android {
             dirs 'libs'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs "libs"
+        }
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-
-
-
     api 'com.android.support:design:27.+'
     implementation 'com.android.support:cardview-v7:27.+'
-
-
-
-
     implementation project(':baselibrary')
     implementation(name: 'androidutils', ext: 'aar')
     implementation(name: 'androidbaseclass', ext: 'aar')
@@ -64,32 +61,26 @@ dependencies {
     implementation(name: 'sdklibrary', ext: 'aar')
     implementation(name: 'Dialog', ext: 'aar')
     implementation(name: 'shape', ext: 'aar')
-//    implementation(name: 'MyProgress', ext: 'aar')
-//    implementation(name: 'rxandroid-2.0.2', ext: 'aar')
-
-//    implementation 'com.android.support:multidex:1.0.1'
-//    implementation(name: 'rxandroid', ext: 'aar')
+    //    implementation(name: 'MyProgress', ext: 'aar')
+    //    implementation(name: 'rxandroid-2.0.2', ext: 'aar')
+    //    implementation 'com.android.support:multidex:1.0.1'
+    //    implementation(name: 'rxandroid', ext: 'aar')
     implementation 'com.github:retrofitutil:1.1.4'
-//    implementation 'com.github:fastshape:1.0.4'
+    //    implementation 'com.github:fastshape:1.0.4'
     implementation 'com.github:RxBus:1.0.5'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
     implementation 'top.zibin:Luban:1.1.3'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation 'cz.msebera.android:httpclient:4.4.1.2'
-
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
     implementation 'com.contrarywind:Android-PickerView:3.2.6'
-
     implementation 'com.youth.banner:banner:1.4.9'
     implementation 'com.github.ome450901:SimpleRatingBar:1.4.1'
-
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
-
-
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
-
+    implementation files('libs/Msc.jar')
+    implementation files('libs/Sunflower.jar')
 }
