--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders  = [
+                JPUSH_PKGNAME : "com.zhizhong.yujian",
+                JPUSH_APPKEY : "dfcb390d92a568e9eea94ac3", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+        ]
     }
     signingConfigs {
         release {
@@ -83,4 +89,10 @@ dependencies {
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
     implementation files('libs/Msc.jar')
     implementation files('libs/Sunflower.jar')
+
+
+    //极光推送
+    implementation 'cn.jiguang.sdk:jpush:3.0.3'
+    // 此处以JPush 3.0.3 版本为例。
+    implementation 'cn.jiguang.sdk:jcore:1.1.1'
 }
