--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,6 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
 
-
     <!--直播-->
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -135,7 +134,25 @@
         <activity android:name=".module.my.activity.VIPActivity"/>
         <activity android:name=".module.mall.activity.NewScanActivity"/>
 
-
+        <!--微信登录和分享Activity配置-->
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <!--微信支付Activity配置-->
+        <activity
+            android:name=".wxapi.WXPayEntryActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <!--这里填写自己的appid,貌似不写也可以-->
+                <data android:scheme="wxaee1f6934896436a"/>
+            </intent-filter>
+        </activity>
 
         <service android:name=".service.MyAPPDownloadService"/>
         <receiver
